src/snapshots/kk__test_type_check__type_annotation_record_property_type.snap
---
source: src/main.rs
expression: "type_check_source(\"\n         let x = {a: string = 2}\n         \".to_string())"
---
Err(
    UnifyError(
        TypeMismatch {
            location: Location {
                source: NonFile {
                    env_name: "TESTING",
                },
                position: Position {
                    line_start: 1,
                    line_end: 1,
                    column_start: 31,
                    column_end: 31,
                },
            },
            expected_type: Named {
                name: "string",
                arguments: [],
            },
            actual_type: Named {
                name: "number",
                arguments: [],
            },
        },
    ),
)
