src/snapshots/kk__test_type_check__type_check_function_2.snap
---
source: src/main.rs
expression: "type_check_source(\"\n            let x = 2\n            let f = 'hi'.x\n            \".trim().to_string())"
---
Err(
    UnifyError(
        CannotInvokeNonFunction {
            location: Location {
                source: NonFile {
                    env_name: "TESTING",
                },
                position: Position {
                    line_start: 1,
                    line_end: 1,
                    column_start: 26,
                    column_end: 26,
                },
            },
            actual_type: Number,
        },
    ),
)
