src/snapshots/kk__test_type_check__type_check_function_3.snap
---
source: src/main.rs
expression: "type_check_source(\"\n            let identity = \\\\x => x\n            let x = 'hello'.identity\n            let y: number = x\n            \".trim().to_string())"
---
Err(
    UnifyError(
        TypeMismatch {
            location: Location {
                source: NonFile {
                    env_name: "TESTING",
                },
                position: Position {
                    line_start: 2,
                    line_end: 2,
                    column_start: 29,
                    column_end: 29,
                },
            },
            expected_type: Named {
                name: "number",
                arguments: [],
            },
            actual_type: Named {
                name: "string",
                arguments: [],
            },
        },
    ),
)
