src/snapshots/kk__test_type_check__type_check_simple_1.snap
---
source: src/main.rs
expression: "type_check_source(\"let x: string = 123\".to_string())"
---
Err(
    UnifyError(
        TypeMismatch {
            location: Location {
                source: NonFile {
                    env_name: "TESTING",
                },
                position: Position {
                    line_start: 0,
                    line_end: 0,
                    column_start: 16,
                    column_end: 18,
                },
            },
            expected_type: Named {
                name: "string",
                arguments: [],
            },
            actual_type: Named {
                name: "number",
                arguments: [],
            },
        },
    ),
)
