src/snapshots/kk__test_type_check__type_check_simple_2.snap
---
source: src/main.rs
expression: "type_check_source(\"let x: number = 123\".to_string())"
---
Ok(
    (),
)
