src/snapshots/kk__test_type_check__unify_function_branches_2.snap
---
source: src/main.rs
expression: "type_check_source(\"\n            type Boolean = #true | #false\n            let and: \\\\(Boolean, Boolean) => Boolean = \n              \\\\(#bomb, #true) => #true\n            \".trim().to_string())"
---
Err(
    UnifyError(
        UnionTypeMismatch {
            expected_union_type: UnionType {
                tags: [
                    TagType {
                        tagname: "#true",
                        payload: None,
                    },
                    TagType {
                        tagname: "#false",
                        payload: None,
                    },
                ],
                bound: Exact,
                catch_all: false,
            },
            missing_tags: [
                TagType {
                    tagname: "#true",
                    payload: None,
                },
                TagType {
                    tagname: "#false",
                    payload: None,
                },
            ],
            extraneous_tags: [
                TagType {
                    tagname: "#bomb",
                    payload: None,
                },
            ],
            location: Location {
                source: NonFile {
                    env_name: "TESTING",
                },
                position: Position {
                    line_start: 2,
                    line_end: 2,
                    column_start: 15,
                    column_end: 38,
                },
            },
        },
    ),
)
